# R2-D2

./: .gitignore  Dockerfile  README.md  pyproject.toml
r2d2/: cli.py  gitlab.py  pkgs.py  readme.py  repo.py
r2d2/templates/: config.yaml  release-notes.md
